<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hobby_detail_start_time"
            android:textColor="@color/hobbyPurple"
            android:textSize="14sp"
            android:layout_weight="1"/>
    <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hobby_detail_date"
            android:textColor="@color/hobbyPurple"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_weight="1"/>
    <TextView
            android:id="@+id/date_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="start"
            android:text="@string/hobby_detail_day_of_week"
            android:textColor="@color/hobbyPurple"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_weight="1"/>
</LinearLayout>
