<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragment.SettingsFragment">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/map_toolbar"
                app:title="@string/settings"
                app:titleTextColor="@color/white"
                android:theme="@style/ToolbarTitleStyles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/hobbyBlue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleTextAppearance="@style/Toolbar.TitleText" />

        <View
                android:id="@+id/toolbar_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/map_toolbar"
                style="@style/ToolbarPadding" />

        <TextView
                android:id="@+id/locationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/location_title"
                android:textAllCaps="false"
                android:textColor="@color/hobbyGreyDark"
                android:textColorHighlight="@color/hobbyBlue"
                android:textColorHint="@color/hobbyBlue"
                android:textColorLink="@color/hobbyBlue"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_padding" />

        <TextView
                android:id="@+id/current_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/use_current_location"
                android:textColor="@color/hobbyGreyDark"
                android:textColorHighlight="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textColorLink="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationText" />

        <Switch
                android:id="@+id/user_location_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:scrollbarThumbHorizontal="@color/hobbyGreyDark"
                android:scrollbarThumbVertical="@color/hobbyGreyDark"
                android:theme="@style/SwitchTheme"
                app:layout_constraintBottom_toBottomOf="@+id/current_location_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/current_location_text" />

        <TextView
                android:id="@+id/accept_from_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/accept_from_settings"
                android:textColor="@color/hobbyBlue"
                app:layout_constraintBottom_toTopOf="@+id/location_map_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_location_text" />

        <Button
                android:id="@+id/location_map_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_corners_pill"
                android:backgroundTint="@color/hobbyTurquoise"
                android:fontFamily="@font/poppins_semibold"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/choose_location_from_map"
                android:textAllCaps="false"
                android:textColor="@color/hobbyBlue"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accept_from_settings" />

        <TextView
                android:id="@+id/recent_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/recent_locations"
                android:textAllCaps="false"
                android:textColor="@color/hobbyGreyDark"
                android:textColorHighlight="@color/hobbyBlue"
                android:textColorHint="@color/hobbyBlue"
                android:textColorLink="@color/hobbyBlue"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/location_map_button"
                app:layout_constraintTop_toBottomOf="@+id/location_map_button" />

        <view
                android:id="@+id/location_list"
                class="androidx.recyclerview.widget.RecyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/recent_location_text"
                app:layout_constraintTop_toBottomOf="@+id/recent_location_text">

        </view>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>